[gd_scene load_steps=6 format=4 uid="uid://ds1m0nkkxv3py"]

[ext_resource type="Script" path="res://concepts/parallax-level.gd" id="1_ikjyb"]
[ext_resource type="Texture2D" uid="uid://dt00pmay67o0d" path="res://assets/white-16x16.png" id="2_51hti"]
[ext_resource type="PackedScene" uid="uid://b8m6yl4vxq41k" path="res://player/player.tscn" id="3_m3dao"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_brp1i"]
texture = ExtResource("2_51hti")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_w1ba0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_brp1i")

[node name="ParallaxLevel" type="Node2D"]
script = ExtResource("1_ikjyb")

[node name="MainLayerParallax" type="Parallax2D" parent="."]

[node name="MainLayer" type="TileMapLayer" parent="MainLayerParallax"]
unique_name_in_owner = true
self_modulate = Color(4.33177e-07, 0.35685, 0.357131, 1)
tile_map_data = PackedByteArray("AAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAADv/wAAAAAAAAAAAADw/wAAAAAAAAAAAADx/wAAAAAAAAAAAADy/wAAAAAAAAAAAADz/wAAAAAAAAAAAAD0/wAAAAAAAAAAAAD1/wAAAAAAAAAAAAD2/wAAAAAAAAAAAAD3/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAADn/wUAAAAAAAAAAADo/wUAAAAAAAAAAADp/wUAAAAAAAAAAADq/wUAAAAAAAAAAADr/wUAAAAAAAAAAADs/wUAAAAAAAAAAADt/wUAAAAAAAAAAADu/wUAAAAAAAAAAADv/wUAAAAAAAAAAADw/wUAAAAAAAAAAADx/wUAAAAAAAAAAADy/wUAAAAAAAAAAADz/wUAAAAAAAAAAAD0/wUAAAAAAAAAAAD1/wUAAAAAAAAAAAD2/wUAAAAAAAAAAAD3/wUAAAAAAAAAAAD4/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wUAAAAAAAAAAADv/wEAAAAAAAAAAADv/wIAAAAAAAAAAADv/wMAAAAAAAAAAADv/wQAAAAAAAAAAADn/wYAAAAAAAAAAADn/wcAAAAAAAAAAADn/wgAAAAAAAAAAADn/wkAAAAAAAAAAADX/wkAAAAAAAAAAADY/wkAAAAAAAAAAADZ/wkAAAAAAAAAAADa/wkAAAAAAAAAAADb/wkAAAAAAAAAAADc/wkAAAAAAAAAAADd/wkAAAAAAAAAAADe/wkAAAAAAAAAAADf/wkAAAAAAAAAAADg/wkAAAAAAAAAAADh/wkAAAAAAAAAAADi/wkAAAAAAAAAAADj/wkAAAAAAAAAAADk/wkAAAAAAAAAAADl/wkAAAAAAAAAAADm/wkAAAAAAAAAAADM//3/AAAAAAAAAADN//3/AAAAAAAAAADO//3/AAAAAAAAAADP//3/AAAAAAAAAADQ//3/AAAAAAAAAADR//3/AAAAAAAAAADS//3/AAAAAAAAAADT//3/AAAAAAAAAADU//3/AAAAAAAAAADV//3/AAAAAAAAAADW//3/AAAAAAAAAADX//3/AAAAAAAAAADY//3/AAAAAAAAAADZ//3/AAAAAAAAAADa//3/AAAAAAAAAADb//3/AAAAAAAAAADc//3/AAAAAAAAAADM//7/AAAAAAAAAADM////AAAAAAAAAADM/wAAAAAAAAAAAADM/wEAAAAAAAAAAADM/wIAAAAAAAAAAADM/wMAAAAAAAAAAADM/wQAAAAAAAAAAADM/wUAAAAAAAAAAADM/wYAAAAAAAAAAADM/wcAAAAAAAAAAADM/wgAAAAAAAAAAADM/wkAAAAAAAAAAADM/woAAAAAAAAAAADM/wsAAAAAAAAAAADM/wwAAAAAAAAAAADM/w0AAAAAAAAAAADM/w4AAAAAAAAAAADM/w8AAAAAAAAAAADM/xAAAAAAAAAAAADM/xEAAAAAAAAAAADM/xIAAAAAAAAAAADM/xMAAAAAAAAAAADM/xQAAAAAAAAAAADM/xUAAAAAAAAAAADM/xYAAAAAAAAAAADN/xYAAAAAAAAAAADO/xYAAAAAAAAAAADP/xYAAAAAAAAAAADQ/xYAAAAAAAAAAADR/xYAAAAAAAAAAADS/xYAAAAAAAAAAADT/xYAAAAAAAAAAADU/xYAAAAAAAAAAADV/xYAAAAAAAAAAADW/xYAAAAAAAAAAADX/xYAAAAAAAAAAADY/xYAAAAAAAAAAADZ/xYAAAAAAAAAAADa/xYAAAAAAAAAAADb/xYAAAAAAAAAAADc/xYAAAAAAAAAAADd/xYAAAAAAAAAAADe/xYAAAAAAAAAAADf/xYAAAAAAAAAAADg/xYAAAAAAAAAAADg/xAAAAAAAAAAAADg/xEAAAAAAAAAAADg/xIAAAAAAAAAAADg/xMAAAAAAAAAAADg/xQAAAAAAAAAAADg/xUAAAAAAAAAAADg/woAAAAAAAAAAADg/wsAAAAAAAAAAADg/wwAAAAAAAAAAADg/w0AAAAAAAAAAADg/w4AAAAAAAAAAADg/w8AAAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAADk//n/AAAAAAAAAADl//n/AAAAAAAAAADm//n/AAAAAAAAAADn//n/AAAAAAAAAADo//n/AAAAAAAAAADp//n/AAAAAAAAAADq//n/AAAAAAAAAADr//n/AAAAAAAAAADs//n/AAAAAAAAAADt//n/AAAAAAAAAADu//n/AAAAAAAAAADv//n/AAAAAAAAAADw//n/AAAAAAAAAADx//n/AAAAAAAAAADy//n/AAAAAAAAAADz//n/AAAAAAAAAAD0//n/AAAAAAAAAAD1//n/AAAAAAAAAAD2//n/AAAAAAAAAAD3//n/AAAAAAAAAAD4//n/AAAAAAAAAAD5//n/AAAAAAAAAAD6//n/AAAAAAAAAAD7//n/AAAAAAAAAAD8//n/AAAAAAAAAAD9//n/AAAAAAAAAAD+//n/AAAAAAAAAAD///n/AAAAAAAAAAABAPn/AAAAAAAAAAACAPn/AAAAAAAAAAADAPn/AAAAAAAAAAAEAPn/AAAAAAAAAAAFAPn/AAAAAAAAAAAGAPn/AAAAAAAAAAAHAPn/AAAAAAAAAAAIAPn/AAAAAAAAAAAJAPn/AAAAAAAAAAAKAPn/AAAAAAAAAAALAPn/AAAAAAAAAAAMAPn/AAAAAAAAAAANAPn/AAAAAAAAAAAOAPn/AAAAAAAAAAAPAPn/AAAAAAAAAAAQAPn/AAAAAAAAAAARAPn/AAAAAAAAAAASAPn/AAAAAAAAAAATAPn/AAAAAAAAAAAUAPn/AAAAAAAAAAAVAPn/AAAAAAAAAAAWAPn/AAAAAAAAAADh/xAAAAAAAAAAAADh/xEAAAAAAAAAAADh/xIAAAAAAAAAAADh/xMAAAAAAAAAAADh/xQAAAAAAAAAAADh/xUAAAAAAAAAAADh/xYAAAAAAAAAAADi/xAAAAAAAAAAAADi/xEAAAAAAAAAAADi/xIAAAAAAAAAAADi/xMAAAAAAAAAAADi/xQAAAAAAAAAAADi/xUAAAAAAAAAAADi/xYAAAAAAAAAAADj/xAAAAAAAAAAAADj/xEAAAAAAAAAAADj/xIAAAAAAAAAAADj/xMAAAAAAAAAAADj/xQAAAAAAAAAAADj/xUAAAAAAAAAAADj/xYAAAAAAAAAAADk/xAAAAAAAAAAAADk/xEAAAAAAAAAAADk/xIAAAAAAAAAAADk/xMAAAAAAAAAAADk/xQAAAAAAAAAAADk/xUAAAAAAAAAAADk/xYAAAAAAAAAAADl/xAAAAAAAAAAAADl/xEAAAAAAAAAAADl/xIAAAAAAAAAAADl/xMAAAAAAAAAAADl/xQAAAAAAAAAAADl/xUAAAAAAAAAAADl/xYAAAAAAAAAAADm/xAAAAAAAAAAAADm/xEAAAAAAAAAAADm/xIAAAAAAAAAAADm/xMAAAAAAAAAAADm/xQAAAAAAAAAAADm/xUAAAAAAAAAAADm/xYAAAAAAAAAAADn/xAAAAAAAAAAAADn/xEAAAAAAAAAAADn/xIAAAAAAAAAAADn/xMAAAAAAAAAAADn/xQAAAAAAAAAAADn/xUAAAAAAAAAAADn/xYAAAAAAAAAAADo/xAAAAAAAAAAAADo/xEAAAAAAAAAAADo/xIAAAAAAAAAAADo/xMAAAAAAAAAAADo/xQAAAAAAAAAAADo/xUAAAAAAAAAAADo/xYAAAAAAAAAAADp/xAAAAAAAAAAAADp/xEAAAAAAAAAAADp/xIAAAAAAAAAAADp/xMAAAAAAAAAAADp/xQAAAAAAAAAAADp/xUAAAAAAAAAAADp/xYAAAAAAAAAAADq/xAAAAAAAAAAAADq/xEAAAAAAAAAAADq/xIAAAAAAAAAAADq/xMAAAAAAAAAAADq/xQAAAAAAAAAAADq/xUAAAAAAAAAAADq/xYAAAAAAAAAAADr/xAAAAAAAAAAAADr/xEAAAAAAAAAAADr/xIAAAAAAAAAAADr/xMAAAAAAAAAAADr/xQAAAAAAAAAAADr/xUAAAAAAAAAAADr/xYAAAAAAAAAAADs/xAAAAAAAAAAAADs/xEAAAAAAAAAAADs/xIAAAAAAAAAAADs/xMAAAAAAAAAAADs/xQAAAAAAAAAAADs/xUAAAAAAAAAAADs/xYAAAAAAAAAAADt/xAAAAAAAAAAAADt/xEAAAAAAAAAAADt/xIAAAAAAAAAAADt/xMAAAAAAAAAAADt/xQAAAAAAAAAAADt/xUAAAAAAAAAAADt/xYAAAAAAAAAAADu/xAAAAAAAAAAAADu/xEAAAAAAAAAAADu/xIAAAAAAAAAAADu/xMAAAAAAAAAAADu/xQAAAAAAAAAAADu/xUAAAAAAAAAAADu/xYAAAAAAAAAAADu/wsAAAAAAAAAAADu/wwAAAAAAAAAAADu/w0AAAAAAAAAAADu/w4AAAAAAAAAAADu/w8AAAAAAAAAAADv/wsAAAAAAAAAAADw/wsAAAAAAAAAAADx/wsAAAAAAAAAAADy/wsAAAAAAAAAAADz/wsAAAAAAAAAAAD0/wsAAAAAAAAAAAD1/wsAAAAAAAAAAAD2/wsAAAAAAAAAAAD3/wsAAAAAAAAAAAD4/wsAAAAAAAAAAAD5/wsAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAATAAYAAAAAAAAAAAAUAAYAAAAAAAAAAAAVAAYAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAPr/AAAAAAAAAAAWAPv/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAWAP7/AAAAAAAAAAAWAP//AAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAADb/xIAAAAAAAAAAADb/xMAAAAAAAAAAADb/xQAAAAAAAAAAADb/xUAAAAAAAAAAADc/xIAAAAAAAAAAADc/xMAAAAAAAAAAADc/xQAAAAAAAAAAADc/xUAAAAAAAAAAADd/xIAAAAAAAAAAADd/xMAAAAAAAAAAADd/xQAAAAAAAAAAADd/xUAAAAAAAAAAADe/xIAAAAAAAAAAADe/xMAAAAAAAAAAADe/xQAAAAAAAAAAADe/xUAAAAAAAAAAADf/xIAAAAAAAAAAADf/xMAAAAAAAAAAADf/xQAAAAAAAAAAADf/xUAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_w1ba0")

[node name="SubLayerParallax" type="Parallax2D" parent="."]

[node name="SubLayer" type="TileMapLayer" parent="SubLayerParallax"]
unique_name_in_owner = true
self_modulate = Color(0.188235, 1, 1, 1)
tile_map_data = PackedByteArray("AAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAD6/wYAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAATAAYAAAAAAAAAAADv/wAAAAAAAAAAAADw/wAAAAAAAAAAAADx/wAAAAAAAAAAAADy/wAAAAAAAAAAAADz/wAAAAAAAAAAAAD0/wAAAAAAAAAAAAD1/wAAAAAAAAAAAAD2/wAAAAAAAAAAAAD3/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAADv/wEAAAAAAAAAAADv/wIAAAAAAAAAAADv/wMAAAAAAAAAAADv/wQAAAAAAAAAAADv/wUAAAAAAAAAAADn/wUAAAAAAAAAAADo/wUAAAAAAAAAAADp/wUAAAAAAAAAAADq/wUAAAAAAAAAAADr/wUAAAAAAAAAAADs/wUAAAAAAAAAAADt/wUAAAAAAAAAAADu/wUAAAAAAAAAAADn/wYAAAAAAAAAAADn/wcAAAAAAAAAAADn/wgAAAAAAAAAAADn/wkAAAAAAAAAAADX/wkAAAAAAAAAAADY/wkAAAAAAAAAAADZ/wkAAAAAAAAAAADa/wkAAAAAAAAAAADb/wkAAAAAAAAAAADc/wkAAAAAAAAAAADd/wkAAAAAAAAAAADe/wkAAAAAAAAAAADf/wkAAAAAAAAAAADg/wkAAAAAAAAAAADh/wkAAAAAAAAAAADi/wkAAAAAAAAAAADj/wkAAAAAAAAAAADk/wkAAAAAAAAAAADl/wkAAAAAAAAAAADm/wkAAAAAAAAAAADg/xAAAAAAAAAAAADg/xEAAAAAAAAAAADg/xIAAAAAAAAAAADg/xMAAAAAAAAAAADg/xQAAAAAAAAAAADg/xUAAAAAAAAAAADg/xYAAAAAAAAAAADh/xAAAAAAAAAAAADh/xEAAAAAAAAAAADh/xIAAAAAAAAAAADh/xMAAAAAAAAAAADh/xQAAAAAAAAAAADh/xUAAAAAAAAAAADh/xYAAAAAAAAAAADi/xAAAAAAAAAAAADi/xEAAAAAAAAAAADi/xIAAAAAAAAAAADi/xMAAAAAAAAAAADi/xQAAAAAAAAAAADi/xUAAAAAAAAAAADi/xYAAAAAAAAAAADj/xAAAAAAAAAAAADj/xEAAAAAAAAAAADj/xIAAAAAAAAAAADj/xMAAAAAAAAAAADj/xQAAAAAAAAAAADj/xUAAAAAAAAAAADj/xYAAAAAAAAAAADk/xAAAAAAAAAAAADk/xEAAAAAAAAAAADk/xIAAAAAAAAAAADk/xMAAAAAAAAAAADk/xQAAAAAAAAAAADk/xUAAAAAAAAAAADk/xYAAAAAAAAAAADl/xAAAAAAAAAAAADl/xEAAAAAAAAAAADl/xIAAAAAAAAAAADl/xMAAAAAAAAAAADl/xQAAAAAAAAAAADl/xUAAAAAAAAAAADl/xYAAAAAAAAAAADm/xAAAAAAAAAAAADm/xEAAAAAAAAAAADm/xIAAAAAAAAAAADm/xMAAAAAAAAAAADm/xQAAAAAAAAAAADm/xUAAAAAAAAAAADm/xYAAAAAAAAAAADn/xAAAAAAAAAAAADn/xEAAAAAAAAAAADn/xIAAAAAAAAAAADn/xMAAAAAAAAAAADn/xQAAAAAAAAAAADn/xUAAAAAAAAAAADn/xYAAAAAAAAAAADo/xAAAAAAAAAAAADo/xEAAAAAAAAAAADo/xIAAAAAAAAAAADo/xMAAAAAAAAAAADo/xQAAAAAAAAAAADo/xUAAAAAAAAAAADo/xYAAAAAAAAAAADp/xAAAAAAAAAAAADp/xEAAAAAAAAAAADp/xIAAAAAAAAAAADp/xMAAAAAAAAAAADp/xQAAAAAAAAAAADp/xUAAAAAAAAAAADp/xYAAAAAAAAAAADq/xAAAAAAAAAAAADq/xEAAAAAAAAAAADq/xIAAAAAAAAAAADq/xMAAAAAAAAAAADq/xQAAAAAAAAAAADq/xUAAAAAAAAAAADq/xYAAAAAAAAAAADr/xAAAAAAAAAAAADr/xEAAAAAAAAAAADr/xIAAAAAAAAAAADr/xMAAAAAAAAAAADr/xQAAAAAAAAAAADr/xUAAAAAAAAAAADr/xYAAAAAAAAAAADs/xAAAAAAAAAAAADs/xEAAAAAAAAAAADs/xIAAAAAAAAAAADs/xMAAAAAAAAAAADs/xQAAAAAAAAAAADs/xUAAAAAAAAAAADs/xYAAAAAAAAAAADt/xAAAAAAAAAAAADt/xEAAAAAAAAAAADt/xIAAAAAAAAAAADt/xMAAAAAAAAAAADt/xQAAAAAAAAAAADt/xUAAAAAAAAAAADt/xYAAAAAAAAAAADu/xAAAAAAAAAAAADu/xEAAAAAAAAAAADu/xIAAAAAAAAAAADu/xMAAAAAAAAAAADu/xQAAAAAAAAAAADu/xUAAAAAAAAAAADu/xYAAAAAAAAAAADM/xYAAAAAAAAAAADN/xYAAAAAAAAAAADO/xYAAAAAAAAAAADP/xYAAAAAAAAAAADQ/xYAAAAAAAAAAADR/xYAAAAAAAAAAADS/xYAAAAAAAAAAADT/xYAAAAAAAAAAADU/xYAAAAAAAAAAADV/xYAAAAAAAAAAADW/xYAAAAAAAAAAADX/xYAAAAAAAAAAADY/xYAAAAAAAAAAADZ/xYAAAAAAAAAAADa/xYAAAAAAAAAAADb/xYAAAAAAAAAAADc/xYAAAAAAAAAAADd/xYAAAAAAAAAAADe/xYAAAAAAAAAAADf/xYAAAAAAAAAAADM//3/AAAAAAAAAADM//7/AAAAAAAAAADM////AAAAAAAAAADM/wAAAAAAAAAAAADM/wEAAAAAAAAAAADM/wIAAAAAAAAAAADM/wMAAAAAAAAAAADM/wQAAAAAAAAAAADM/wUAAAAAAAAAAADM/wYAAAAAAAAAAADM/wcAAAAAAAAAAADM/wgAAAAAAAAAAADM/wkAAAAAAAAAAADM/woAAAAAAAAAAADM/wsAAAAAAAAAAADM/wwAAAAAAAAAAADM/w0AAAAAAAAAAADM/w4AAAAAAAAAAADM/w8AAAAAAAAAAADM/xAAAAAAAAAAAADM/xEAAAAAAAAAAADM/xIAAAAAAAAAAADM/xMAAAAAAAAAAADM/xQAAAAAAAAAAADM/xUAAAAAAAAAAADN//3/AAAAAAAAAADO//3/AAAAAAAAAADP//3/AAAAAAAAAADQ//3/AAAAAAAAAADR//3/AAAAAAAAAADS//3/AAAAAAAAAADT//3/AAAAAAAAAADU//3/AAAAAAAAAADV//3/AAAAAAAAAADW//3/AAAAAAAAAADX//3/AAAAAAAAAADY//3/AAAAAAAAAADZ//3/AAAAAAAAAADa//3/AAAAAAAAAADb//3/AAAAAAAAAADc//3/AAAAAAAAAADd//3/AAAAAAAAAADd//7/AAAAAAAAAADd////AAAAAAAAAADd/wAAAAAAAAAAAADd/wEAAAAAAAAAAADd/wIAAAAAAAAAAADd/wMAAAAAAAAAAADd/wQAAAAAAAAAAADd/wUAAAAAAAAAAADd/wYAAAAAAAAAAADd/wcAAAAAAAAAAADd/wgAAAAAAAAAAADe//3/AAAAAAAAAADe//7/AAAAAAAAAADe////AAAAAAAAAADe/wAAAAAAAAAAAADe/wEAAAAAAAAAAADe/wIAAAAAAAAAAADe/wMAAAAAAAAAAADe/wQAAAAAAAAAAADe/wUAAAAAAAAAAADe/wYAAAAAAAAAAADe/wcAAAAAAAAAAADe/wgAAAAAAAAAAADf//3/AAAAAAAAAADf//7/AAAAAAAAAADf////AAAAAAAAAADf/wAAAAAAAAAAAADf/wEAAAAAAAAAAADf/wIAAAAAAAAAAADf/wMAAAAAAAAAAADf/wQAAAAAAAAAAADf/wUAAAAAAAAAAADf/wYAAAAAAAAAAADf/wcAAAAAAAAAAADf/wgAAAAAAAAAAADg//3/AAAAAAAAAADg//7/AAAAAAAAAADg////AAAAAAAAAADg/wAAAAAAAAAAAADg/wEAAAAAAAAAAADg/wIAAAAAAAAAAADg/wMAAAAAAAAAAADg/wQAAAAAAAAAAADg/wUAAAAAAAAAAADg/wYAAAAAAAAAAADg/wcAAAAAAAAAAADg/wgAAAAAAAAAAADh//3/AAAAAAAAAADh//7/AAAAAAAAAADh////AAAAAAAAAADh/wAAAAAAAAAAAADh/wEAAAAAAAAAAADh/wIAAAAAAAAAAADh/wMAAAAAAAAAAADh/wQAAAAAAAAAAADh/wUAAAAAAAAAAADh/wYAAAAAAAAAAADh/wcAAAAAAAAAAADh/wgAAAAAAAAAAADi//3/AAAAAAAAAADi//7/AAAAAAAAAADi////AAAAAAAAAADi/wAAAAAAAAAAAADi/wEAAAAAAAAAAADi/wIAAAAAAAAAAADi/wMAAAAAAAAAAADi/wQAAAAAAAAAAADi/wUAAAAAAAAAAADi/wYAAAAAAAAAAADi/wcAAAAAAAAAAADi/wgAAAAAAAAAAADj//3/AAAAAAAAAADj//7/AAAAAAAAAADj////AAAAAAAAAADj/wAAAAAAAAAAAADj/wEAAAAAAAAAAADj/wIAAAAAAAAAAADj/wMAAAAAAAAAAADj/wQAAAAAAAAAAADj/wUAAAAAAAAAAADj/wYAAAAAAAAAAADj/wcAAAAAAAAAAADj/wgAAAAAAAAAAADu/wsAAAAAAAAAAADu/wwAAAAAAAAAAADu/w0AAAAAAAAAAADu/w4AAAAAAAAAAADu/w8AAAAAAAAAAADv/wsAAAAAAAAAAADw/wsAAAAAAAAAAADx/wsAAAAAAAAAAADy/wsAAAAAAAAAAADz/wsAAAAAAAAAAAD0/wsAAAAAAAAAAAD1/wsAAAAAAAAAAAD2/wsAAAAAAAAAAAD3/wsAAAAAAAAAAAD4/wsAAAAAAAAAAAD5/wsAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAADk//n/AAAAAAAAAADl//n/AAAAAAAAAADm//n/AAAAAAAAAADn//n/AAAAAAAAAADo//n/AAAAAAAAAADp//n/AAAAAAAAAADq//n/AAAAAAAAAADr//n/AAAAAAAAAADs//n/AAAAAAAAAADt//n/AAAAAAAAAADu//n/AAAAAAAAAADv//n/AAAAAAAAAADw//n/AAAAAAAAAADx//n/AAAAAAAAAADy//n/AAAAAAAAAADz//n/AAAAAAAAAAD0//n/AAAAAAAAAAD1//n/AAAAAAAAAAD2//n/AAAAAAAAAAD3//n/AAAAAAAAAAD4//n/AAAAAAAAAAD5//n/AAAAAAAAAAD6//n/AAAAAAAAAAD7//n/AAAAAAAAAAD8//n/AAAAAAAAAAD9//n/AAAAAAAAAAD+//n/AAAAAAAAAAD///n/AAAAAAAAAAABAPn/AAAAAAAAAAACAPn/AAAAAAAAAAADAPn/AAAAAAAAAAAEAPn/AAAAAAAAAAAFAPn/AAAAAAAAAAAGAPn/AAAAAAAAAAAHAPn/AAAAAAAAAAAIAPn/AAAAAAAAAAAJAPn/AAAAAAAAAAAKAPn/AAAAAAAAAAALAPn/AAAAAAAAAAAMAPn/AAAAAAAAAAANAPn/AAAAAAAAAAAOAPn/AAAAAAAAAAAPAPn/AAAAAAAAAAAQAPn/AAAAAAAAAAARAPn/AAAAAAAAAAASAPn/AAAAAAAAAAATAPn/AAAAAAAAAAAUAPn/AAAAAAAAAAAVAPn/AAAAAAAAAAAWAPn/AAAAAAAAAAAUAAYAAAAAAAAAAAAVAAYAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAPr/AAAAAAAAAAAWAPv/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAWAP7/AAAAAAAAAAAWAP//AAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_w1ba0")

[node name="Player" parent="." instance=ExtResource("3_m3dao")]
position = Vector2(-51, -1)

[node name="Camera2D" type="Camera2D" parent="Player"]

[connection signal="layers_switched" from="Player" to="." method="_on_player_layers_switched"]
